# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rectangle.cpp  triangle.cpp  utils.cpp  utils.h  vcpkg.json
exercises/: ht-ex1.cpp  ht-ex2.cpp  ht-ex3.cpp
shaders/: fragmentShader.glsl  ht-ex3-fragShader.glsl  vertexShader.glsl
